--- a/1.html
+++ b/1.html
@@ -339,6 +339,17 @@
                             </div>
                         </div>
                     </li>
+                    <!-- NEW ITEM ADDED HERE -->
+                    <li class="vision-item professional-item" data-year="now">
+                        <p class="vision-text">My side venture, 'Empowering Future Leaders', is running successfully and growing steadily. With the right additional pay of $500,000 USD and more, granted with ease, grace, and divine will - starting now.</p>
+                        <span class="timeline-badge badge-now">Right Now</span>
+                        <div class="manifestation-controls">
+                            <div class="checkbox-container">
+                                <input type="checkbox" class="manifest-checkbox" id="item18">
+                                <label for="item18">Manifested</label>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </section>
             
